# SAEScopingMiniproject

./: .gitignore  README.md  pyproject.toml
docs/: train-diagram.mermaid
sae_scoping/servers/: README.md  hf_openai_cli_client.py  hf_openai_schemas.py  hf_openai_server.py  hf_openai_server_group.py
sae_scoping/servers/model_configs/: name_resolution.py
sae_scoping/servers/model_configs/group_configs/: spylab_trojan1_biology_server_group.json
sae_scoping/servers/model_configs/individual_configs/: default_model_config.json  gemma2_scoped_2026_01_27.json  gemma2_vanilla_2026_01_27.json  spylab_trojan1_biology_sae_sparsify_config.json  spylab_trojan1_biology_scoped_sparsify_config.json  test_model_config.json
sae_scoping/trainers/: README.md
sae_scoping/trainers/sae_enhanced/: README.md  defaults_configs.py  prune.py  rank.py  train.py  utils.py
sae_scoping/utils/: README.md
sae_scoping/utils/gemma2/: chat_template_with_system_prompt.jinja  prompting.py
sae_scoping/utils/generation/: api_generator.py  messages.py
sae_scoping/utils/hooks/: pt_hooks.py  pt_hooks_stateful.py  sae.py
scripts/: README.md  evaluate_neuron_sweep.py  find_firing_rates.py  train_with_firing_rates.py
