[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sae-scoping"
version = "2020.0.0"
dependencies = [
  "beartype>=0.14.1",
  "click>=8.1.7",
  "datasets>=2.14.0",
  "ipython>=8.0.0",
  "jaxtyping>=0.2.0",
  "litellm>=1.0.0",
  "notebook>=7.0.0",
  "numpy>=1.24.0",
  "orjson>=3.9.0",
  "pandas>=2.0.0",
  "peft>=0.7.0",
  "plotly>=5.0.0",
  "pydantic>=2.0.0",
  "pytest>=8.0.0",
  "requests>=2.32.0",
  "ruff>=0.1.0",
  "sae-lens>=4.0.0",
  "safetensors>=0.4.0",
  "scikit-learn>=1.3.0",
  "seaborn>=0.13.0",
  "torch>=2.1.0",
  "transformers>=4.40.0",
  "trl>=0.8.0",
  "wandb>=0.16.0",
  "pandera[pandas]>=0.18.0",
  "tabulate>=0.9.0",
]
requires-python = ">=3.12"
authors = [
  {name = "Adriano Hernandez", email = "adrianoh@mit.edu"},
]
maintainers = [
  {name = "Adriano Hernandez", email = "adrianoh@mit.edu"}
]
description = "A minimal toolkit for scoping language models using Sparse Autoencoders using Gemma 2 models."
readme = "README.md"
license = "GPL-3.0"
license-files = ["LICENSE.md"]
keywords = ["SAE", "Scoping", "Language Models"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.12"
]
[project.urls]
Homepage = "https://github.com/4gatepylon/SAEScopingMiniproject"
[tool.ruff]
line-length = 200